# swag2-backpack-predict

./: .env.example  .gitignore  Makefile  README.md  main.py  setup.cfg  setup.py
notebooks/: simple_grid_search.ipynb  training.ipynb  v2_kfold.ipynb
src/: eda.py  model.py  preprocessing.py  utils.py
