[metadata]
name = SWAG 2 - Kaggle competition
version = 0.0.1
author = Baptiste PICARD
author-email = dev.baptpicxdev@gmail.com
description = Simple description to update.
long_description = file: README.md

[options]
python_requires = >=3.12
install_requires =
    ipykernel==6.29.5
    python-dotenv==1.0.1
    kaggle==1.6.17
    numpy==2.2.2
    pandas==2.2.3
    scikit-learn==1.6.1
    neptune==1.13.0
    matplotlib==3.10.0
    seaborn==0.13.2
